--- a/src/frontend/views/login.html
+++ b/src/frontend/views/login.html
@@ -1,6 +1,6 @@
 <section class="container">
     <div class="row d-flex align-items-center justify-content-center vh-100">
-        <form class="text-center" id="login-form">
+        <form class="text-center col-lg-5 col-md-7" id="login-form">
             <h1 class="title">Inicia sesión</h1>
 
             <div class="mb-5">
