--- a/src/frontend/views/manualPersonajes.html
+++ b/src/frontend/views/manualPersonajes.html
@@ -1,4 +1,4 @@
-<h2 class="text-center mt-md-4 mb-5" id="manual-title"></h2>
+<h2 class="text-center mt-md-4 mb-5" id="manual-title">COMO JUGAR</h2>
 <p class="text-center">Hexchees es un juego de ajedrez cuyo objetivo es derrotar al oponente "comiendo" a
     todo su equipo</p>
 <p class="text-center">Los equipos estan conformados por distintos personajes con movimientos unicos</p>
