--- a/src/frontend/styles/style.css
+++ b/src/frontend/styles/style.css
@@ -121,6 +121,10 @@ p {
     font-family: 'Silkscreen', cursive !important;
     font-size: 2em !important;
     text-shadow: 0 0 20px #A29CD7 !important;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .loader {
